--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header">
         <div class="App-name">
-          Library
+          <h1 id="logo">Library</h1>
         </div>
       </div>
       <div class="sidebar">
@@ -58,6 +58,22 @@
         </form>
       </div>
       <div class="main">
+        <div class="library-status">
+          <h2>Library Status</h2>
+          <div class="total_books">
+            <h3>Total books :</h3>
+            <span id="books_count"></span>
+          </div>
+          <div class="total_read">
+            <h3>Read:</h3>
+            <span id="read_b_count"></span>
+          </div>
+          <div class="not_read">
+            <h3>Unread:</h3>
+            <span id="not_read_b_count"></span>
+          </div>
+          <button type="button" id="delete-all-btn">DELETE ALL</button>
+        </div>
       </div>
     </div>
   </body>
