Adding styling to the add book button and function showLibrary to the js file

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
             </span>
             <span class="checkbox-label">I have already read this book!</span>
           </label>
-    
-          <input type="button" value="ADD A NEW BOOK" id="add-book">
+          <input type="button" value="+ Add Book" id="add-book">
         </form>
       </div>
       <div class="main">
