modifying some details in Library Info frame

--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
         <div class="library-status">
           <h2>Library Status</h2>
           <div class="total_books">
-            <h3>Total books :</h3>
-            <span id="books_count"></span>
+            <h3>Total books : <span id="books_count"></span></h3> 
           </div>
           <div class="total_read">
-            <h3>Read:</h3>
-            <span id="read_b_count"></span>
+            <h3>Read : <span id="read_b_count"></span></h3>
           </div>
           <div class="not_read">
-            <h3>Unread:</h3>
-            <span id="not_read_b_count"></span>
+            <h3>Unread : <span id="not_read_b_count"></span></h3>
           </div>
         </div>
       </div>
