making modal window for delete all to work

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </tbody>
         </table>
 
-         <!-- MODAL 
+         <!-- MODAL--> 
         <div id="modal" class="close">
           <div class="modal-card">
             <div class="modal-header">
@@ -100,7 +100,7 @@
               </div>
             </div>
           </div>
-        </div>-->
+        </div>
       </div>
     </div>
   </body>
